--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 :root {
-
+  --index: calc(1vw + 1vh);
+  --text: #e7e7e0;
 }
 
 @font-face {
@@ -21,12 +22,24 @@
 
 body {
   background-color: #010101;
-  color: #ffffff;
   font-family: raleway_f, sans-serif;
   line-height: 1.55;
 }
-.main-header{
+.main-header {
   position: relative;
+}
+
+.main-header::after {
+  content: '';
+  bottom: calc(var(index) * -4.5);
+  background-image: url(../img/ground.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  z-index: 77;
+  width: 100%;
+  height: calc(var(--index) * 10);
 }
 
 .layers {
@@ -35,14 +48,60 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+  overflow: hidden;
+  position: relative;
 }
-.layer{
+
+.layers__base {
+  transform: translate3d(0, calc(var(--scrollTop) / 1.6), 0);
+  z-index: 0;
+}
+
+.layers__middle {
+  transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0);
+  z-index: 2;
+}
+.layers__front {
+  transform: translate3d(0, calc(var(--scrollTop) / 5.7), 0);
+  z-index: 2;
+}
+
+.layers__title {
+  font-size: calc(var(--index) * 2.5);
+  letter-spacing: calc(var(--index) / 2.2);
+}
+
+.layers__caption {
+  font-size: calc(var(--index) / 1.2);
+  letter-spacing: calc(var(--index) / 3.5);
+  margin-top: calc(var(--index) * -0.75);
+}
+
+.layer__header {
+  color: var(--text);
+  text-shadow: 0 0 15px #9d7e37;
+  font-weight: 900;
+  z-index: 1;
+  transform: translate3d(0, calc(var(--scrollTop) / 2), 0);
+  text-transform: uppercase;
+  will-change: transform;
+}
+
+.layer {
   height: 100%;
   width: 100%;
   position: absolute;
   background-size: cover;
   background-position: center;
+  will-change: transform;
 }
+
 .main-article {
-  height: 100vh;
+  color: var(--text);
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
