--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --index: calc(1vw + 1vh);
   --text: #e7e7e0;
@@ -65,6 +69,21 @@ body {
   will-change: transform;
 }
 
+.layers__base {
+  transform: translate3d(0, calc(var(--scrollTop) / 1.6), 0);
+  z-index: 0;
+}
+
+.layers__middle {
+  transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0);
+  z-index: 2;
+}
+
+.layers__front {
+  transform: translate3d(0, calc(var(--scrollTop) / 5.7), 0);
+  z-index: 3;
+}
+
 .layer__header {
   color: var(--text);
   text-shadow: 0 0 15px #9d7e37;
@@ -74,17 +93,6 @@ body {
   text-transform: uppercase;
   will-change: transform;
   z-index: 1;
-}
-
-.layers__base {
-  transform: translate3d(0, calc(var(--scrollTop) / 1.6), 0);
-  z-index: 0;
-}
-.layers__middle {
-  transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0);
-}
-.layers__front {
-  transform: translate3d(0, calc(var(--scrollTop) / 5.7), 0);
 }
 
 .layers__caption {
